--- a/quizpage.html
+++ b/quizpage.html
@@ -55,16 +55,16 @@
     <div class="container">
         <h1>Which Topic Do You Want To Quiz Yourself On?</h1>
         <div class="grid">
-            <div class="button" onclick="openForm()">Elements</div>
+            <div class="button" onclick="openForm()">Animals</div>
             <div class="button">Directions</div>
             <div class="button">Food</div>
             <div class="button">Countries</div>
         </div>
     </div>
     <script>
-        /* google form on clicking quiz*/
+        /* Open quiz*/
         function openForm() {
-            window.open('https://docs.google.com/forms/d/e/1FAIpQLScn5UZpc02MYREGMVgYGEWv7w4POLgYHiYWII_0-IgO_T9MsA/viewform?usp=sf_link', '_blank');
+            window.open('https://take.quiz-maker.com/QBND01YSA', '_blank');
         }
     </script>
 </body>
