--- a/quizpage.html
+++ b/quizpage.html
@@ -55,16 +55,19 @@
     <div class="container">
         <h1>Which Topic Do You Want To Quiz Yourself On?</h1>
         <div class="grid">
-            <div class="button" onclick="openForm()">Animals</div>
-            <div class="button">Directions</div>
+            <div class="button" onclick="openAnimals()">Animals</div>
+            <div class="button" onclick="openNumbers()">Numbers</div>
             <div class="button">Food</div>
             <div class="button">Countries</div>
         </div>
     </div>
     <script>
         /* Open quiz*/
-        function openForm() {
+        function openAnimals() {
             window.open('https://take.quiz-maker.com/QBND01YSA', '_blank');
+        }
+        function openNumbers() {
+            window.open('https://take.quiz-maker.com/QBN1MFF7L', '_blank');
         }
     </script>
 </body>
