--- a/quizpage.html
+++ b/quizpage.html
@@ -13,7 +13,7 @@
             font-size: 48px;
             font-weight: bold;
             margin-bottom: 10px;
-            margin-left: 30px;
+            margin-left: 5px;
         }
         .container {
             display: flex;
@@ -53,7 +53,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Which Topic Do You Want To Quiz Yourself On?</h1>
+        <!--><h1>Which Topic Do You Want To Quiz Yourself On?</h1><!-->
         <div class="grid">
             <div class="button" onclick="openAnimals()">Animals</div>
             <div class="button" onclick="openNumbers()">Numbers</div>
