--- a/quizpage.html
+++ b/quizpage.html
@@ -10,10 +10,10 @@
             font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
         }
         h1 {
-            font-size: 48px;
+            font-size: 20px;
             font-weight: bold;
-            margin-bottom: 10px;
-            margin-left: 5px;
+            margin-bottom: 5px;
+            
         }
         .container {
             display: flex;
@@ -38,9 +38,9 @@
             color: rgb(14, 0, 0);
             font-size: 12px;
             font-weight: bold;
-            box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.2);
+            box-shadow: 8px 8px 8px rgba(0, 0, 0, 0.2);
             transition: transform 0.3s ease;
-            min-width: 300px;
+            height: 10%; 
         }
         
         .button:hover {
