--- a/quizpage.html
+++ b/quizpage.html
@@ -34,9 +34,10 @@
             background: radial-gradient(circle, rgba(200, 231, 129, 0.821), rgba(62, 151, 71, 0.6));
             border-radius: 20px;
             margin: 20px;
+            padding: 10px;
             cursor: pointer;
             color: rgb(14, 0, 0);
-            font-size: 12px;
+            font-size: 18px;
             font-weight: bold;
             box-shadow: 8px 8px 8px rgba(0, 0, 0, 0.2);
             transition: transform 0.3s ease
