--- a/quizpage.html
+++ b/quizpage.html
@@ -34,8 +34,8 @@
             background: radial-gradient(circle, rgba(200, 231, 129, 0.821), rgba(62, 151, 71, 0.6));
             border-radius: 20px;
             margin: 20px;
-            padding: 10px;
             cursor: pointer;
+            min-height: 50px;
             color: rgb(14, 0, 0);
             font-size: 18px;
             font-weight: bold;
