--- a/quizpage.html
+++ b/quizpage.html
@@ -32,10 +32,10 @@
             justify-content: center;
             align-items: center;
             background: radial-gradient(circle, rgba(200, 231, 129, 0.821), rgba(62, 151, 71, 0.6));
-            border-radius: 20px;
-            margin: 20px;
+            border-radius: 10px;
+            margin: 10px;
             cursor: pointer;
-            min-height: 50px;
+            min-height: 100px;
             color: rgb(14, 0, 0);
             font-size: 18px;
             font-weight: bold;
@@ -50,7 +50,7 @@
     </style>
 </head>
 <body>
-   
+   <h1> Pick a topic to practice Mandarin with a fun quiz!</h1>
         <div class="grid">
             <div class="button" onclick="openAnimals()">Animals</div>
             <div class="button" onclick="openNumbers()">Numbers</div>
