--- a/quizpage.html
+++ b/quizpage.html
@@ -13,13 +13,13 @@
             font-size: 28px;
             font-weight: bold;
             margin-bottom: 5px;
-            
+            justify-content: center;
+            text-shadow: 2px 2px #ff0000;
         }
         .container {
             display: flex;
             justify-content: center;
-            align-items: center;
-           
+            align-items: center;           
         }
         .grid {
             display: grid;
@@ -32,12 +32,12 @@
             justify-content: center;
             align-items: center;
             background: radial-gradient(circle, rgba(200, 231, 129, 0.821), rgba(62, 151, 71, 0.6));
-            border-radius: 10px;
+            border-radius: 20px;
             margin: 10px;
             cursor: pointer;
             min-height: 150px;
             color: rgb(14, 0, 0);
-            font-size: 22px;
+            font-size: 28px;
             font-weight: bold;
             box-shadow: 8px 8px 8px rgba(0, 0, 0, 0.2);
             transition: transform 0.3s ease
@@ -51,7 +51,7 @@
 </head>
 <body>
     <div class="container">
-    <h1> Pick a topic to practice Mandarin with a fun quiz!</h1>
+    <h1> Pick a Topic to Practice Mandarin with a Fun Quiz!</h1>
         <div class="grid">
             <div class="button" onclick="openAnimals()">Animals</div>
             <div class="button" onclick="openNumbers()">Numbers</div>
