--- a/quizpage.html
+++ b/quizpage.html
@@ -14,7 +14,7 @@
             font-weight: bold;
             margin-bottom: 5px;
             justify-content: center;
-            text-shadow: 5px 5px #ff0000;
+            text-shadow: 5px 5px rgba(0,0,0,0.2);
         }
         .grid1 {
             display: grid;
