--- a/quizpage.html
+++ b/quizpage.html
@@ -14,12 +14,13 @@
             font-weight: bold;
             margin-bottom: 5px;
             text-shadow: 5px 5px rgba(0,0,0,0);
+            align-item: center;
+            justify-content: center;
         }
         .grid1 {
             display: grid;
             grid-template-columns: repeat(1, 1fr);
             gap: 10px;
-            justify-content: center;
         }
         .grid2 {
             display: grid;
@@ -33,7 +34,10 @@
             align-items: center;
             background: radial-gradient(circle, rgba(200, 231, 129, 0.821), rgba(62, 151, 71, 0.6));
             border-radius: 20px;
-            margin: 10px;
+            margin-top: 10px;
+            margin-bottom: 10px;
+            margin-left: 20px;
+            margin-right: 20px;
             cursor: pointer;
             min-height: 150px;
             color: rgb(14, 0, 0);
