--- a/quizpage.html
+++ b/quizpage.html
@@ -14,13 +14,15 @@
             font-weight: bold;
             margin-bottom: 5px;
             text-shadow: 5px 5px rgba(0,0,0,0);
-            align-item: center;
+            align-items: center;
             justify-content: center;
         }
         .grid1 {
             display: grid;
             grid-template-columns: repeat(1, 1fr);
             gap: 10px;
+             align-items: center;
+            justify-content: center;
         }
         .grid2 {
             display: grid;
@@ -39,7 +41,7 @@
             margin-left: 20px;
             margin-right: 20px;
             cursor: pointer;
-            min-height: 150px;
+            min-height: 130px;
             color: rgb(14, 0, 0);
             font-size: 28px;
             font-weight: bold;
