--- a/quizpage.html
+++ b/quizpage.html
@@ -14,15 +14,12 @@
             font-weight: bold;
             margin-bottom: 5px;
             text-shadow: 5px 5px rgba(0,0,0,0);
-            align-items: center;
-            justify-content: center;
+            text-align: center;
         }
         .grid1 {
             display: grid;
             grid-template-columns: repeat(1, 1fr);
             gap: 10px;
-             align-items: center;
-            justify-content: center;
         }
         .grid2 {
             display: grid;
