--- a/quizpage.html
+++ b/quizpage.html
@@ -60,6 +60,8 @@
             <div class="button" onclick="openNumbers()">Numbers</div>
             <div class="button">Food</div>
             <div class="button">Countries</div>
+            <div class="button"></div>
+            <div class="button"></div>
         </div>
     </div>
     <script>
