--- a/quizpage.html
+++ b/quizpage.html
@@ -10,21 +10,21 @@
             font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
         }
         h1 {
-            font-size: 48px;
+            font-size: 28px;
             font-weight: bold;
-            margin-bottom: 30px;
-            margin-left: 30px;
+            margin-bottom: 5px;
+            text-shadow: 5px 5px rgba(0,0,0,0);
+            text-align: center;
         }
-        .container {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-        }
-        .grid {
+        .grid1 {
             display: grid;
-            grid-template-columns: repeat(2, 1fr);
-            gap: 5px;
+            grid-template-columns: repeat(1, 1fr);
+            gap: 10px;
+        }
+        .grid2 {
+            display: grid;
+            grid-template-columns: repeat(1, 1fr);
+            gap: 10px;
         }
         .button {
             flex: 1;
@@ -32,17 +32,18 @@
             justify-content: center;
             align-items: center;
             background: radial-gradient(circle, rgba(200, 231, 129, 0.821), rgba(62, 151, 71, 0.6));
-            border-radius: 30px;
-            margin: 50px;
+            border-radius: 20px;
+            margin-top: 10px;
+            margin-bottom: 10px;
+            margin-left: 20px;
+            margin-right: 20px;
             cursor: pointer;
+            min-height: 130px;
             color: rgb(14, 0, 0);
-            font-size: 36px;
+            font-size: 28px;
             font-weight: bold;
-            box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.2);
-            transition: transform 0.3s ease;
-            height: 80%;
-            min-height: 200px;
-            min-width: 300px;
+            box-shadow: 8px 8px 8px rgba(0, 0, 0, 0.2);
+            transition: transform 0.3s ease
         }
         
         .button:hover {
@@ -52,13 +53,15 @@
     </style>
 </head>
 <body>
-    <div class="container">
-        <h1>Which Topic Do You Want To Quiz Yourself On?</h1>
-        <div class="grid">
+    <div class="grid1">
+    <h1> Pick a Topic to Practice Mandarin with a Fun Quiz!</h1>
+        <div class="grid2">
             <div class="button" onclick="openAnimals()">Animals</div>
             <div class="button" onclick="openNumbers()">Numbers</div>
             <div class="button">Food</div>
             <div class="button">Countries</div>
+            <div class="button"></div>
+            <div class="button"></div>
         </div>
     </div>
     <script>
