--- a/flashcardpage.html
+++ b/flashcardpage.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <h1 style="color: rgb(255, 255, 255);"><span style="font-weight: 900;">Basic Characters Flipcards</span> 
-        <br><span style="margin-left: 130px;">(Hover to Flip)</span></h1>
+        <br><span style="margin-left: 130px;">(Hover/ Click to Flip)</span></h1>
         <div class="flip-card">
             <div class="flip-card-inner">
                 <div class="term">Term</div>
