--- a/flashcardpage.html
+++ b/flashcardpage.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <div class="container">
-        <h1 style="color: rgb(255, 255, 255);"><span style="font-weight: 900;">Basic Characters Flipcards</span> 
-        <br><span style="margin-left: 130px;">(Hover/ Click to Flip)</span></h1>
+        <h1>Basic Characters Flipcards</h1> 
+        <h2>(Hover/ Click to Flip)</span></h2>
         <div class="flip-card">
             <div class="flip-card-inner">
                 <div class="term">Term</div>
