--- a/flashcardpage.html
+++ b/flashcardpage.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <h1>Basic Characters Flipcards</h1> 
-        <h2>(Hover/ Click to Flip)</span></h2>
+        <h2>(Hover/ Click to Flip)</h2>
         <div class="flip-card">
             <div class="flip-card-inner">
                 <div class="term">Term</div>
