--- a/flashcardpage.html
+++ b/flashcardpage.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Basic Characters Flipcards</h1> 
+        <h1> Characters Flipcards</h1> 
         <h2>(Hover/ Click to Flip)</h2>
         <div class="flip-card">
             <div class="flip-card-inner">
